preview implementation products

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <h1 class="ui inverted header">Afstudeer Portfolio</h1>
             </div>
         </div>
+
         <div class="ui inverted three item attached menu">
             <div class="ui centered aligned container">
                 <a class="active item">
@@ -35,6 +36,82 @@
                 <a class="item">
                     Over stage
                 </a>
+            </div>
+        </div>
+
+        <div class="ui container basic segment">
+            <div class="ui three stackable cards">
+                <div class="ui card">
+                    <div class="ui instant fade reveal">
+                        <div class="visible content">
+                            <img src="assets/test.jpg" class="ui fluid image">
+                        </div>
+
+                        <div class="hidden content">
+                            <div class="ui fluid image">
+                                <img src="assets/test.gif">
+                                <div class="image caption">
+                                    <h3 class="ui inverted header">product naam</h3>
+                                    Een korte voorbeeld beschrijving van een product die het liefts grofweg rond deze lengte zal zijn. De rest hiervan dient als upvulling zodat de gewenste maximale grootte is bereikt.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ui card">
+                    <div class="ui instant fade reveal">
+                        <div class="visible content">
+                            <img src="assets/test.jpg" class="ui fluid image">
+                        </div>
+
+                        <div class="hidden content">
+                            <div class="ui fluid image">
+                                <img src="assets/test.gif">
+                                <div class="image caption">
+                                    <h3 class="ui inverted header">product naam</h3>
+                                    Een korte voorbeeld beschrijving van een product die het liefts grofweg rond deze lengte zal zijn. De rest hiervan dient als upvulling zodat de gewenste maximale grootte is bereikt.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ui card">
+                    <div class="ui instant fade reveal">
+                        <div class="visible content">
+                            <img src="assets/test.jpg" class="ui fluid image">
+                        </div>
+
+                        <div class="hidden content">
+                            <div class="ui fluid image">
+                                <img src="assets/test.gif">
+                                <div class="image caption">
+                                    <h3 class="ui inverted header">product naam</h3>
+                                    Een korte voorbeeld beschrijving van een product die het liefts grofweg rond deze lengte zal zijn. De rest hiervan dient als upvulling zodat de gewenste maximale grootte is bereikt.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ui card">
+                    <div class="ui instant fade reveal">
+                        <div class="visible content">
+                            <img src="assets/test.jpg" class="ui fluid image">
+                        </div>
+
+                        <div class="hidden content">
+                            <div class="ui fluid image">
+                                <img src="assets/test.gif">
+                                <div class="image caption">
+                                    <h3 class="ui inverted header">product naam</h3>
+                                    Een korte voorbeeld beschrijving van een product die het liefts grofweg rond deze lengte zal zijn. De rest hiervan dient als upvulling zodat de gewenste maximale grootte is bereikt.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
