Initial design product page

--- a/index.html
+++ b/index.html
@@ -21,38 +21,79 @@
     <body>
         <div class="banner ui inverted vertical center aligned segment">
             <div class="ui text container">
-                <h1 class="ui inverted header">Afstudeer Portfolio</h1>
+                <h1 class="ui inverted header">Graduate Portfolio</h1>
             </div>
         </div>
 
-        <div class="ui inverted three item attached menu">
+
+        <div class="ui inverted three item important attached menu">
             <div class="ui centered aligned container">
+
                 <a class="active item">
                     Home
                 </a>
+
+                <div class="ui simple dropdown item">
+                    Products <i class="dropdown icon"></i>
+                    <div class="menu">
+                        
+                        <a class="item" href="hand-collision.html">Hand collision</a>
+
+                        <div class="item">
+                            Product 2 <i class="dropdown icon"></i>
+                            <div class="menu">
+                                <a class="item">Sub Product 2.1</a>
+
+                                <a class="item">Sub Product 2.2</a>
+                            </div>
+                        </div>
+
+                        <a class="item">Product 3</a>
+
+                    </div>
+                </div>
+
                 <a class="item">
-                    Producten
+                    About internship
                 </a>
-                <a class="item">
-                    Over stage
-                </a>
+
             </div>
         </div>
 
+
         <div class="ui container basic segment">
             <div class="ui three stackable cards">
-                <div class="ui card">
+
+                <a class="ui card" href="hand-collision.html">
                     <div class="ui instant fade reveal">
                         <div class="visible content">
-                            <img src="assets/test.jpg" class="ui fluid image">
+                            <img src="assets/images/test.jpg" class="ui fluid image">
                         </div>
 
                         <div class="hidden content">
                             <div class="ui fluid image">
-                                <img src="assets/test.gif">
+                                <img src="assets/images/test.gif">
                                 <div class="image caption">
-                                    <h3 class="ui inverted header">product naam</h3>
-                                    Een korte voorbeeld beschrijving van een product die het liefts grofweg rond deze lengte zal zijn. De rest hiervan dient als upvulling zodat de gewenste maximale grootte is bereikt.
+                                    <h3 class="ui inverted header">HAND COLLISION</h3>
+                                    A system to make hands physical in the VR world. Could be used to prevent sequence-breaking through walls.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <div class="ui card">
+                    <div class="ui instant fade reveal">
+                        <div class="visible content">
+                            <img src="assets/images/test.jpg" class="ui fluid image">
+                        </div>
+
+                        <div class="hidden content">
+                            <div class="ui fluid image">
+                                <img src="assets/images/test.gif">
+                                <div class="image caption">
+                                    <h3 class="ui inverted header">product name</h3>
+                                    A short example description of a product which would preferable be around this size. The rest of this text will serve to fill up the space to reach the earlier indicated size properly.
                                 </div>
                             </div>
                         </div>
@@ -62,15 +103,15 @@
                 <div class="ui card">
                     <div class="ui instant fade reveal">
                         <div class="visible content">
-                            <img src="assets/test.jpg" class="ui fluid image">
+                            <img src="assets/images/test.jpg" class="ui fluid image">
                         </div>
 
                         <div class="hidden content">
                             <div class="ui fluid image">
-                                <img src="assets/test.gif">
+                                <img src="assets/images/test.gif">
                                 <div class="image caption">
-                                    <h3 class="ui inverted header">product naam</h3>
-                                    Een korte voorbeeld beschrijving van een product die het liefts grofweg rond deze lengte zal zijn. De rest hiervan dient als upvulling zodat de gewenste maximale grootte is bereikt.
+                                    <h3 class="ui inverted header">product name</h3>
+                                    A short example description of a product which would preferable be around this size. The rest of this text will serve to fill up the space to reach the earlier indicated size properly.
                                 </div>
                             </div>
                         </div>
@@ -80,38 +121,21 @@
                 <div class="ui card">
                     <div class="ui instant fade reveal">
                         <div class="visible content">
-                            <img src="assets/test.jpg" class="ui fluid image">
+                            <img src="assets/images/test.jpg" class="ui fluid image">
                         </div>
 
                         <div class="hidden content">
                             <div class="ui fluid image">
-                                <img src="assets/test.gif">
+                                <img src="assets/images/test.gif">
                                 <div class="image caption">
-                                    <h3 class="ui inverted header">product naam</h3>
-                                    Een korte voorbeeld beschrijving van een product die het liefts grofweg rond deze lengte zal zijn. De rest hiervan dient als upvulling zodat de gewenste maximale grootte is bereikt.
+                                    <h3 class="ui inverted header">product name</h3>
+                                    A short example description of a product which would preferable be around this size. The rest of this text will serve to fill up the space to reach the earlier indicated size properly.
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="ui card">
-                    <div class="ui instant fade reveal">
-                        <div class="visible content">
-                            <img src="assets/test.jpg" class="ui fluid image">
-                        </div>
-
-                        <div class="hidden content">
-                            <div class="ui fluid image">
-                                <img src="assets/test.gif">
-                                <div class="image caption">
-                                    <h3 class="ui inverted header">product naam</h3>
-                                    Een korte voorbeeld beschrijving van een product die het liefts grofweg rond deze lengte zal zijn. De rest hiervan dient als upvulling zodat de gewenste maximale grootte is bereikt.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </body>
