Added banner, fix menu, minor content additions.

--- a/hand-collision.html
+++ b/hand-collision.html
@@ -78,11 +78,13 @@
                 <div class="ui basic center aligned segment">
                     <h1 class="ui title header">CONCEPT</h1>
                 </div>
+
                 <div class="ui grid">
                     <div class="nine wide column">
                         <p>Every system comes with their own requirements and user story. While the user story is something predetermined by the project lead, the requirements are something that comes as the team discusses the best method to tackle the problem.</p>
                         <p>During concepting it's important to keep in mind what the player or developer might (not) be expecting; their hand shouldn't explode nor should their screen go black whenever hitting a wall.</p>
                     </div>
+
                     <div class="seven wide column">
                         <h4 class="ui title header">REQUIREMENTS</h4>
                         <div class="ui bulleted list">
@@ -101,17 +103,23 @@
                 <div class="ui basic center aligned segment">
                     <h1 class="ui title header">DEVELOPMENT</h1>
                 </div>
+
                 <div class="ui grid">
                     <div class="nine wide column">
-                        <p>Every system comes with their own requirements and user story. While the user story is something predetermined by the project lead, the requirements are something that comes as the team discusses the best method to tackle the problem.</p>
-                        <p>During concepting it's important to keep in mind what the player or developer might (not) be expecting; their hand shouldn't explode nor should their screen go black whenever hitting a wall.</p>
+                        <p>Once the design has been accepted, development on the system can start. All the work on this system is performed by myself, unless the flowchart specifies otherwise.</p>
                     </div>
+
                     <div class="seven wide column">
                         <h4 class="ui title header">FLOWCHART</h4>
                         <img id="flowchart" class="ui fluid image" src="assets/images/hand-collision/flowchart.png">
                     </div>
                 </div>
             </div>
+        </div>
+
+
+        <div class="ui inverted vertical footer segment">
+            <img class="ui left floated medium image" src="assets/images/enversed-banner.png">
         </div>
 
 
