--- a/index.html
+++ b/index.html
@@ -138,5 +138,11 @@
 
             </div>
         </div>
+
+
+        <div class="ui inverted vertical footer segment">
+            <img class="ui left floated medium image" src="assets/images/enversed-banner.png">
+        </div>
+        
     </body>
 </html>
