Created clarity subtask

--- a/hand-collision.html
+++ b/hand-collision.html
@@ -242,7 +242,17 @@
             <i class="close icon"></i>
             <div class="header">Clarity</div>
             <div class="content">
-                In construction...
+                <p>An important thing about clarity, whilst maintaining immersion, is to be noninvasive. Examples would be: don’t make essential things disappear, try to be predictable and, of curse, don’t scare the player.</p>
+                <p>Currently, when the character’s hand “collides”, all it does is stop moving. Nothing too weird. And given the system is properly set up (see configurability), should also be somewhat expected behaviour.</p>
+                <div class="ui grid">
+                    <div class="nine wide column">
+                        <p>Aside from stopping the character’s hand, it also displays a “ghost hand”. This ghost could be either the same mesh (but with different texture) as that of the character, or use a mesh resembling the real-life motion controller used.</p>
+                        <p>This mesh is editable on a per-project basis (and if you really want to can also be changed during run-time (like any mesh component). Using a character’s hand mesh should help keeping immersion whilst using a controller mesh should provide more clarity that the thing that’s moving is not “part of the game”, but instead some form of indication, like the room-scale boundaries that pop up as you reach the edges of your setup.</p>
+                    </div>
+                    <div class="seven wide column">
+                        <img class="ui fluid image" src="https://via.placeholder.com/1920x1080">
+                    </div>
+                </div>
             </div>
         </div>
 
