Fixed minor typo

--- a/hand-collision.html
+++ b/hand-collision.html
@@ -223,7 +223,7 @@
                 <p>Depending on the visualisation your hand size can differ, either on project basis or based on the current state of your character. The traces use this size.</p>
                 <p>This setting is visualised with a sphere simple collision shape without any collision enabled. This visualisation is only visible in the viewport (engine-time) and make it easier to see scale, compared to a float (radius in cm).</p>
 
-                <h4 class="ui header">Whether it’s active</h4>
+                <h4 class="ui header">Visibility threshold</h4>
                 <div class="ui grid">
                     <div class="nine wide column">
                         <p>When the hand collides with something and stops moving, the “ghost hand” doesn’t instantly become visible. Instead a distance threshold can be chosen when the ghost should pop up.</p>
